[gd_scene load_steps=11 format=3 uid="uid://bwgfsx15se7du"]

[ext_resource type="Script" path="res://Scenes/Stages/Stage7/egg_7.gd" id="1_eal4g"]
[ext_resource type="Texture2D" uid="uid://cdvgrrvkia5qm" path="res://Assets/Stages/07/Egg7.png" id="1_wgmde"]
[ext_resource type="PackedScene" uid="uid://b1c85s58acr04" path="res://Scenes/Stages/Stage7/Enemies/baby_7.tscn" id="2_80e75"]
[ext_resource type="Texture2D" uid="uid://bn7eow621cgjx" path="res://Assets/Stages/07/Egg7Particle.png" id="3_12axa"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cqs03"]
radius = 16.0312

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_tb2h1"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_gftyf"]
offsets = PackedFloat32Array(0.654378, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_pb8sx"]
resource_name = "Shaking"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.7, 0.8, 1, 1.7, 1.8, 2),
"transitions": PackedFloat32Array(1, 0.5, 1, 1, 0.5, 1),
"update": 0,
"values": [Vector2(0, -6), Vector2(-5, -10), Vector2(0, -6), Vector2(0, -6), Vector2(5, -10), Vector2(0, -6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7, 0.8, 1, 1.7, 1.8, 2),
"transitions": PackedFloat32Array(1, 0.5, 1, 1, 0.5, 1),
"update": 0,
"values": [Vector2(0.13, 0.13), Vector2(0.12, 0.16), Vector2(0.13, 0.13), Vector2(0.13, 0.13), Vector2(0.12, 0.16), Vector2(0.13, 0.13)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7, 0.8, 1, 1.7, 1.8, 2),
"transitions": PackedFloat32Array(1, 0.5, 1, 1, 0.5, 1),
"update": 0,
"values": [Vector2(0, -6), Vector2(-5, -10), Vector2(0, -6), Vector2(0, -6), Vector2(5, -10), Vector2(0, -6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.7, 0.8, 1, 1.7, 1.8, 2),
"transitions": PackedFloat32Array(1, 0.5, 1, 1, 0.5, 1),
"update": 0,
"values": [Vector2(0.13, 0.13), Vector2(0.12, 0.16), Vector2(0.13, 0.13), Vector2(0.13, 0.13), Vector2(0.12, 0.16), Vector2(0.13, 0.13)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("EnemySprite:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.7, 0.8, 1, 1.7, 1.8, 2),
"transitions": PackedFloat32Array(1, 0.5, 1, 1, 0.5, 1),
"update": 0,
"values": [0.0, -0.139626, 0.0, 0.0, 0.139626, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Hitbox:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.7, 0.8, 1, 1.7, 1.8, 2),
"transitions": PackedFloat32Array(1, 0.5, 1, 1, 0.5, 1),
"update": 0,
"values": [0.0, -0.139626, 0.0, 0.0, 0.139626, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dl6xt"]
_data = {
"Shaking": SubResource("Animation_pb8sx")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tj7wt"]
radius = 130.769
height = 353.846

[node name="Egg7" type="RigidBody2D" groups=["Enemy"]]
collision_layer = 64
collision_mask = 64
gravity_scale = 0.0
lock_rotation = true
linear_damp = 4.0
script = ExtResource("1_eal4g")
baby = ExtResource("2_80e75")

[node name="EnemySprite" type="Sprite2D" parent="."]
position = Vector2(0, -6)
scale = Vector2(0.13, 0.13)
texture = ExtResource("1_wgmde")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_cqs03")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_tb2h1")
position = Vector2(1, -5)
emitting = false
amount = 16
lifetime = 0.5
one_shot = true
explosiveness = 1.0
texture = ExtResource("3_12axa")
emission_shape = 1
emission_sphere_radius = 15.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 150.0
angular_velocity_min = -720.0
angular_velocity_max = 720.0
scale_amount_min = 0.2
scale_amount_max = 0.2
color_ramp = SubResource("Gradient_gftyf")
anim_offset_max = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Shaking"
libraries = {
"": SubResource("AnimationLibrary_dl6xt")
}

[node name="HatchTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="ParticleTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="Hitbox" type="Area2D" parent="." groups=["EnemyHitbox"]]
visible = false
position = Vector2(0, -6)
scale = Vector2(0.13, 0.13)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_tj7wt")

[connection signal="timeout" from="HatchTimer" to="." method="_on_hatch_timer_timeout"]
[connection signal="timeout" from="ParticleTimer" to="." method="_on_particle_timer_timeout"]
